<resources>
    <string name="app_name">FinalProject</string>

    <string name="etTitle">Barber Service</string>
    <string name="tvEmailLabel">Correo electrónico</string>
    <string name="eteEmailLogin">correo@gmail.com</string>
    <string name="tvPasswordLabel">Contraseña</string>
    <string name="etpPasswordLogin">Password</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnHuella">Iniciar sesión con huella</string>

    <string name="tvTittleRegister_Register">Barber Service</string>
    <string name="tvRegister_Register">Registrarse</string>
    <string name="tvEmail_Register">Ingresa tu correo electrónico</string>
    <string name="EtEmail_Register">Ejm Cristian123@gmail.com</string>
    <string name="tvUserName_Register">Ingresa tu nombre de usuario</string>
    <string name="tvPassword_Register">Contraseña</string>
    <string name="EtPassword_Register">********</string>
    <string name="btnVolver">Iniciar sesión</string>
    <string name="YaCuenta">¿Ya tienes cuenta?</string>

<<<<<<< Updated upstream
    <string name="menuPagos">Tipos de pagos</string>
=======
    <!-- Menu -->
    <string name="menuPagos">Pagos</string>
>>>>>>> Stashed changes
    <string name="menuTurnos">Turnos</string>
    <string name="menuBarberos">Barberos</string>
    <string name="menuClientes">Clientes</string>

<<<<<<< Updated upstream
=======
    <!-- Secciones -->
>>>>>>> Stashed changes
    <string name="etTitlePagos">Tipos de pagos</string>
    <string name="etTitleTurnos">Turnos</string>
    <string name="etTitleClientes">Clientes</string>

<<<<<<< Updated upstream
    <string name="tvNoInternetTitle">No tienes red</string>
    <string name="tvNoInternetMensaje">En este momento no se detecto ninguna red disponible \n intenta de nuevo cuando tengas una conexion estable.</string>
    <string name="btnReintentar">Reintentar</string>

</resources>
=======
</resources>
>>>>>>> Stashed changes
