<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:gravity="center_horizontal"
    android:background="@color/gris_azulado"
    tools:context=".presentation.ui.MainActivity">

    <LinearLayout
        android:id="@+id/lyCentral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_rounded_45"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:textColor="@color/black"
            android:text="@string/etTitle"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/tvEmailLabel" />

        <EditText
            android:id="@+id/eteEmailLogin"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/eteEmailLogin"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:background="@drawable/bg_border"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro"
            android:textAlignment="center"
            app:cornerRadius="12dp"/>

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="20sp"

            android:text="@string/tvPasswordLabel" />

        <EditText
            android:id="@+id/etpPasswordLogin"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/etpPasswordLogin"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:background="@drawable/bg_border"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro"
            android:minHeight="48dp"
            app:cornerRadius="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                app:cornerRadius="12dp"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/material_dynamic_neutral_variant10"
                android:text="@string/btnLogin" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                app:cornerRadius="12dp"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/material_dynamic_neutral_variant10"
                android:text="@string/btnRegister" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>