<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_azulado"
    tools:context=".presentation.ui.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/registerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="645dp"
            android:padding="3dp">


            <TextView
                android:id="@+id/tvTittleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/tvTittleRegister_Register"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvRegister_Register"
                android:textColor="@color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTittleRegister" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvUserName_Register"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

            <EditText
                android:id="@+id/etUserName"
                android:autofillHints="username"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border"
                android:hint="@string/tvUserName_Register"
                android:textColorHint="@color/gris_oscuro"
                android:textColor="@color/gris_oscuro"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvEmail_Register"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUserName" />

            <EditText
                android:id="@+id/etEmail"
                android:autofillHints="emailAddress"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border"
                android:hint="@string/EtEmail_Register"
                android:textColor="@color/gris_oscuro"
                android:textColorHint="@color/gris_oscuro"


                android:inputType="textEmailAddress"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tvPassword_Register"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etPassword"
                android:autofillHints="password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border"
                android:hint="@string/EtPassword_Register"
                android:inputType="textPassword"
                android:textColorHint="@color/gris_oscuro"
                android:textColor="@color/gris_oscuro"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister_Register"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:drawableBottom="@drawable/bg_border"
                android:text="@string/btnRegister"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/material_dynamic_neutral_variant10"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/tvYaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YaCuenta"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnVolver_Register"
                app:layout_constraintEnd_toStartOf="@+id/btnVolver_Register"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnVolver_Register" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVolver_Register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/btnVolver_Register"
                android:textColor="@color/azul_oscuro"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvYaCuenta"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister_Register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>