<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_azulado"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.ui.NoRedActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="32dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@android:drawable/stat_notify_error"
                android:layout_marginBottom="20dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/tvNoInternetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoInternetTitle"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvNoInternetMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNoInternetMensaje"
                android:textAlignment="center"
                android:textColor="@color/gris_oscuro"
                android:textSize="16sp"
                android:layout_marginTop="12dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReintentar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:text="@string/btnReintentar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/material_dynamic_neutral_variant10"
                app:cornerRadius="12dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>